force-app/main/default/objects/Log_Entry__c/Log_Entry__c.object-meta.xml
<CustomObject>
    <description>A log record stored when specified events or processes occur, enabling them to be viewed by an admin at a later date.</description>
    <label>Log Entry</label>
    <nameField>
        <label>Log Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Log Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>