force-app/main/default/objects/Log_Entry__c/fields/Context_User__c.field-meta.xml
<CustomField>
    <fullName>Context_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Salesforce id of the user running the process the event was generated from.</description>
    <label>Context User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Log_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>