force-app/main/default/objects/Log_Entry__c/fields/Is_Error__c.field-meta.xml
<CustomField>
    <fullName>Is_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the logged event a LoggingLevel.ERROR?</description>
    <label>Is Error?</label>
    <type>Checkbox</type>
</CustomField>