force-app/main/default/objects/Log_Entry__c/fields/Is_Exception__c.field-meta.xml
<CustomField>
    <fullName>Is_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the ERROR log stemmed from a caught exception</description>
    <label>Is Exception?</label>
    <type>Checkbox</type>
</CustomField>