force-app/main/default/objects/Log_Entry__c/fields/Logging_Level__c.field-meta.xml
<CustomField>
    <fullName>Logging_Level__c</fullName>
    <description>The criticality of the logged event. Uses the values of the LoggingLevel Enum.</description>
    <label>Logging Level</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>