force-app/main/default/objects/Log_Entry__c/fields/Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Time_Stamp__c</fullName>
    <description>The date and time an event was raised</description>
    <label>Time Stamp</label>
    <type>DateTime</type>
</CustomField>